--- a/app/ML/app.jl.html
+++ b/app/ML/app.jl.html
@@ -4,16 +4,14 @@
 <div class="row">
     <div class="st-col col-6 col-sm st-module">
         <h3>Parameters</h3>
-        <div>
-            <p>Layer 1 neurons</p>
-            <q-slider :min="1" v-model="layer_neurons[2]" label="" :max="64" :step="1"></q-slider>
-            <p>Layer 2 neurons</p>
-            <q-slider :min="1" v-model="layer_neurons[3]" label="" :max="64" :step="1"></q-slider>
-        </div>
+        <p>Layer 1 neurons</p>
+        <q-slider :min="1" v-model="layer_neurons[2]" label="" :max="64" :step="1"></q-slider>
+        <p>Layer 2 neurons</p>
+        <q-slider :min="1" v-model="layer_neurons[3]" label="" :max="64" :step="1"></q-slider>
         <p>Train samples </p>
         <q-slider :min="1" v-model="N_train" label="" :max="500" :step="1"></q-slider>
-
-        Epochs <q-slider :min="1" v-model="epochs" label="" :max="1000" :step="50"></q-slider><br />
+        <p>Epochs</p>
+        <q-slider :min="1" v-model="epochs" label="" :max="1000" :step="50"></q-slider><br />
         <div class="row">
             <div class="st-col col-6 col-sm">
                 <q-btn color="primary" v-on:click="train = !train" lodading="training" text-color="black"
