--- a/app/ML/app.jl.html
+++ b/app/ML/app.jl.html
@@ -14,10 +14,9 @@
         <q-slider :min="1" v-model="epochs" label="" :max="1000" :step="50"></q-slider><br />
         <div class="row">
             <div class="st-col col-6 col-sm">
-                <q-btn color="primary" v-on:click="train = !train" lodading="training" text-color="black"
-                    label="TRAIN"></q-btn>
-                <q-btn color="primary" v-on:click="save = !save" lodading="training" text-color="black"
-                    label="SAVE"></q-btn>
+                <q-btn color="primary" v-on:click="train = !train" loading="training" text-color="black"
+                    loading="training" label="TRAIN"></q-btn>
+                <q-btn color="primary" v-on:click="save = !save" text-color="black" label="SAVE"></q-btn>
             </div>
         </div>
     </div>
