--- a/app/EDA/app.jl.html
+++ b/app/EDA/app.jl.html
@@ -19,7 +19,7 @@
 <div class="row">
     <div class="st-col col-12 col-sm st-module">
         <h4> Boston housing data</h4>
-        <q-table v-model="housing_data" :data="housing_data.data" :columns="housing_data.columns" :pagination.sync="housing_data_pagination">
+        <q-table :data="housing_data.data" :columns="housing_data.columns" :pagination.sync="housing_data_pagination">
         </q-table>
     </div>
 </div>
