--- a/app/EDA/app.jl.html
+++ b/app/EDA/app.jl.html
@@ -1,25 +1,3 @@
 <header class="st-header q-pa-sm">
-    <h1 id="iaj1" draggable="true" class="st-header__title text-h3">Boston housing data EDA
-    </h1>
+    <h1 class="st-header__title text-h3">Boston housing data EDA </h1>
 </header>
-<div class="row">
-    <div class="st-col col-4 col-sm st-module">
-        <h4> Scatter plot</h4>
-        <plotly :data="scatter_trace" :layout="scatter_layout"></plotly>
-    </div>
-    <div class="st-col col-4 col-sm st-module">
-        <h4> Histogram</h4>
-        <plotly :data="hist_trace" :layout="hist_layout"></plotly>
-    </div>
-    <div class="st-col col-4 col-sm st-module">
-        <h4> Box plot</h4>
-        <plotly :data="box_trace" :layout="box_layout"></plotly>
-    </div>
-</div>
-<div class="row">
-    <div class="st-col col-12 col-sm st-module">
-        <h4> Boston housing data</h4>
-        <q-table :data="housing_data.data" :columns="housing_data.columns" :pagination.sync="housing_data_pagination">
-        </q-table>
-    </div>
-</div>
