removed three-app architecture

--- a/layout.jl.html
+++ b/layout.jl.html
@@ -7,4 +7,4 @@
         <a href="/api/" target="_blank" style="text-decoration: none; color: #ffffff;">API</a>
     </div>
 </div>
-<% page(model, partial=true, v__cloak=true, [@yield], @iif(:isready)) %>
+<% page(model, partial=true, [@yield]) %>
